{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 90,
  "lineage": "5db4f915-2b71-40e2-9cc2-c5f6f7554dfd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724056733294:internet-gateway/igw-0271ad44c063ddbc7",
            "id": "igw-0271ad44c063ddbc7",
            "owner_id": "724056733294",
            "tags": {
              "Name": "Terraform"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091003545bf900e08",
            "owner_id": "724056733294",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Terraform Private"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5a793546618a4ce",
            "owner_id": "724056733294",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0271ad44c063ddbc7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Public"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcb44253b6b0a492",
            "route_table_id": "rtb-091003545bf900e08",
            "subnet_id": "subnet-035c450312e5850b8"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private_a",
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dffdc8e0fd233ffd",
            "route_table_id": "rtb-091003545bf900e08",
            "subnet_id": "subnet-0b36dfabcc6ac5472"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.private_b",
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f820fb61b782c2",
            "route_table_id": "rtb-0c5a793546618a4ce",
            "subnet_id": "subnet-0554fb6b726014d73"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.public_a",
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b367132332bedf0c",
            "route_table_id": "rtb-0c5a793546618a4ce",
            "subnet_id": "subnet-0fe235e721ad16878"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.public_b",
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724056733294:subnet/subnet-035c450312e5850b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/23",
            "id": "subnet-035c450312e5850b8",
            "map_public_ip_on_launch": false,
            "owner_id": "724056733294",
            "tags": {
              "Name": "Private 1a"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724056733294:subnet/subnet-0b36dfabcc6ac5472",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/23",
            "id": "subnet-0b36dfabcc6ac5472",
            "map_public_ip_on_launch": false,
            "owner_id": "724056733294",
            "tags": {
              "Name": "Private 1b"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724056733294:subnet/subnet-0554fb6b726014d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0554fb6b726014d73",
            "map_public_ip_on_launch": false,
            "owner_id": "724056733294",
            "tags": {
              "Name": "Public 1a"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724056733294:subnet/subnet-0fe235e721ad16878",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.9.0/24",
            "id": "subnet-0fe235e721ad16878",
            "map_public_ip_on_launch": false,
            "owner_id": "724056733294",
            "tags": {
              "Name": "Public 1b"
            },
            "vpc_id": "vpc-09b8330c02b955ce0"
          },
          "dependencies": [
            "aws_vpc.Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724056733294:vpc/vpc-09b8330c02b955ce0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07291ebc74dc36662",
            "default_route_table_id": "rtb-043ebe3bd523d3b02",
            "default_security_group_id": "sg-0c363c632152fca29",
            "dhcp_options_id": "dopt-4d50dc37",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09b8330c02b955ce0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-043ebe3bd523d3b02",
            "owner_id": "724056733294",
            "tags": {
              "Name": "Terraform"
            }
          }
        }
      ]
    }
  ]
}